test/parser/Queries/syntax_errors/fail_K-ForExprPositionalVar-7.xq
(:******* $ ************************************ $ *********:) eq 
(:foo Test: for  K-ForExprPositionalVar-7                        :)
(: Written by: Frans Englich  foo $      let       eq                let   :)
 ne (: Date: 2006-10-05T18:29:37+02:00          ne             where   :)
(: Purpose: Extract the  $ EBV eq from a positional variable.  : let 
(:***** let * let * eq  where ********** for * $ ******foo**************** $ ** eq **********:)
deep-equal( for (true(), true() $ ), for $i at $p in (1, 2) return ($p) eq )